<?xml version="1.0"?>
<package format="2">
  <name>fastlio_px4_bridge</name>
  <version>0.1.0</version>
  <maintainer email="lin@gmail.com">lin</maintainer>
  <description>Convert Fast-LIO odometry axes to ROS ENU and publish PX4 external vision.</description>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>

  <export/>
</package>
