<?xml version="1.0"?>
<package format="2">
  <name>offboard_hover</name>
  <version>0.3.0</version>
  <maintainer email="lin@gmail.com">lin</maintainer>
  <description>PX4 MAVROS takeoff, Fast-LIO external vision, and EGO trajectory bridge.</description>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>

  <export/>
</package>
