<package>
  <name>quadrotor_msgs</name>
  <version>0.0.0</version>
  <maintainer email="lin@gmail.com">lin</maintainer>
  <description>quadrotor_msgs</description>
  <url>http://ros.org/wiki/quadrotor_msgs</url>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs       </build_depend>
  <build_depend>nav_msgs            </build_depend>
  <build_depend>message_generation  </build_depend>
  <build_depend>cmake_utils         </build_depend>

  <run_depend>geometry_msgs     </run_depend>
  <run_depend>nav_msgs          </run_depend>
  <run_depend>message_runtime   </run_depend>
  <run_depend>cmake_utils   </run_depend>
  <export>
    <cpp cflags="-I${prefix}/include"
         lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib"/>
  </export>

</package>
